# db-proxy-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.test-pg.yml  docker-compose.test.yml
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  event.rs  main.rs  mysql_analyzer.rs  packet.rs  postgres_analyzer.rs  protocol.rs  proxy.rs  sink.rs
tests/: Dockerfile.test  integration_test.py  integration_test_pg.py  requirements-test.txt
